# Limiance-Launchpad

./: .gitignore  CLAUDE_AGENT.md  CLAUDE_BACKEND_PROMPT (1).md  GEMINI_AGENT.md  TODO.md  next.config.ts  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
backend/: .env.example  idl.json  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/lib/: auth.ts  jwt.ts
backend/src/routes/: activity.ts  auth.ts  chart.ts  comments.ts  follows.ts  profiles.ts  tokens.ts  upload.ts  webhook.ts
backend/src/services/: price.ts  prisma.ts  redis.ts  rpc.ts
backend/src/ws/: server.ts
launchpad-frontend/: package-lock.json
launchpad-frontend/src/app/: globals.css
program/: Anchor.toml  Cargo.toml
program/.cargo/: config.toml
program/programs/launchpad/: Cargo.toml
program/programs/launchpad/src/: errors.rs  lib.rs
program/programs/launchpad/src/curve/: exponential.rs  linear.rs  mod.rs  sigmoid.rs
program/programs/launchpad/src/instructions/: buy.rs  cancel_token.rs  graduate.rs  initialize_platform.rs  initialize_token.rs  mod.rs  sell.rs  withdraw_fees.rs
program/programs/launchpad/src/state/: mod.rs  platform_config.rs  token_config.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/explore/: page.tsx
src/hooks/: useAuth.ts  useComments.ts  useExploreTokens.ts  useInitializeToken.ts  useOnboarding.ts  useProfile.ts  useTokenPrice.ts  useTradeTicker.ts  useTradeTransaction.ts
src/lib/: api.ts  pinata.ts  session.ts  types.ts
src/providers/: SolanaWalletProvider.tsx
src/store/: feedStore.ts  tickerStore.ts  uiStore.ts  watchlistStore.ts
src/styles/: globals.css
(+99 files in other folders)
