[package]
name = "launchpad"
version = "0.1.0"
description = "Solana bonding curve token launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.1", features = ["token", "associated_token"] }

# Phase 4: Raydium CPMM CPI — uncomment when integrating full pool creation.
# Confirm devnet program ID at https://github.com/raydium-io/raydium-cpmm before enabling.
# raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpmm", features = ["cpi"] }
